crates/formatter/tests/snapshots/snapshots__migrations__000384_add_workspace_share_scope.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter type api_key_scope add value if not exists 'workspace:share';
alter type api_key_scope add value if not exists 'workspace_dormant:share';
