crates/formatter/tests/snapshots/snapshots__migrations__000386_aibridge_interceptions_ended_at.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table aibridge_interceptions drop column ended_at;
