crates/formatter/tests/snapshots/snapshots__migrations__000386_aibridge_interceptions_ended_at.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table aibridge_interceptions add column ended_at timestamp with time zone default null;
