crates/formatter/tests/snapshots/snapshots__migrations__000388_oauth_app_byte_reg_access_token.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table oauth2_provider_apps
	alter column registration_access_token set data type bytea using decode(
		registration_access_token,
		'escape'
	);
