crates/formatter/tests/snapshots/snapshots__migrations__000390_telemetry_locks.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table telemetry_locks;
